pastas metalicas info
se  agrego la infomacion de   con style para linear la informacion

--- a/webactual/PastasMetalicas.html
+++ b/webactual/PastasMetalicas.html
@@ -54,28 +54,63 @@
 
   <div class="services">
     <div class="container">
-      <div class="text-center">
+
         <h2><strong>SERVICIOS Y BENEFICIOS</strong></h2>
 
-      <div class="col wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+      <div class="col-sm-8 col-sm-6 col-xs-4 " >
 
-          <h3>Algunas compañías venden lubricantes, <strong>TRIBOQUIMIA</strong> vende tiempo efectivo de producción.<h3>
-          <p class="bg-info">Usted puede aprender de los especialistas en tribología y   técnicos de aplicación, la utilización correcta de los lubricantes. Esta   inversión merece la pena y le ofrece a usted mas seguridad en la compra, en el   mantenimiento, en la planificación y en las nuevas instalaciones. Nuestro empeño   es hacerle participe de nuestros conocimientos y de nuestra experiencia.<br>
-          Sabemos que el objetivo de nuestros clientes es rentabilizar al   máximo sus inversiones, tanto en el capitulo de bienes de equipo, como en sus   esfuerzos organizativos por cumplir con los servicios que a su vez, han de dar a   sus clientes.
+          <h3>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</h3>
+          <p class="bg-info"><strong class="text-align : justify;">La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.</strong>
           </p>
         </div>
-        </div>
-        <div  class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms"></div>
-
-          <div class="w-100"></div>
         <div class="row">
 
 
         <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-          <h3>Los beneficios que usted obtiene cuando adquiere nuestros lubricantes son:</h3>
-          <p class="bg-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+          <h3>TRIBOPASTE   NI - 300</h3>
+          <p class="bg-info">PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.</p>
+        </div>
+        <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+          <h3>SPA METÁLLICAL - CE  (MODIFICADA)</h3>
+          <p class="bg-info">PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.</p>
+
+        </div>
+        <div id="top2"class="row">
+
+
+        <div  class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+          <h3>PASTA DE SILICON PIT</h3>
+          <p class="bg-info">LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS  Y LEJÍAS </p>
+
+        </div>
         </div>
       </div>
+      <div id="top"class="row ">
+
+
+      <div  class="col-md-5 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
+        <h3>SPA METÁLICA 20 (SINTÉTICA)</h3>
+        <p class="bg-info">COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC. </p>
+</div>
+</div>
+
+
+    <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
+      <h3>PASTA DE COBRE - 201</h3>
+      <p class="bg-info">EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C</p>
+
+    </div>
+    <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
+      <h3>PASTA DE COBRE 202 NS</h3>
+      <p class="bg-info">EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C.  (PASTA ELECTRO CONDUCTIVA)</p>
+
+    </div>
+
+
+
+
+
+
     </div>
     </div>
 
