--- a/webactual/PastasMetalicas.html
+++ b/webactual/PastasMetalicas.html
@@ -54,60 +54,51 @@
 
   <div class="services">
     <div class="container">
+<div class="text-center">
 
-        <h2><strong>SERVICIOS Y BENEFICIOS</strong></h2>
 
-      <div class="col-sm-8 col-sm-6 col-xs-4 " >
+        <h2 ><strong>SERVICIOS Y BENEFICIOS</strong></h2>
+</div>
+      <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
-          <h3>PASTAS METÁLICAS PARA ALTAS TEMPERATURAS</h3>
-          <p class="bg-info"><strong class="text-align : justify;">La lubricación bajo condiciones extremas ahora y siempre ha representado un reto para los formuladores de grasas y pastas lubricantes. Cuando no pueda mantenerse una película hidrodinámica de aceite debido a la alta presión o choques de carga, temperaturas elevadas o exposición a disolventes y químicos, se requiere una pasta lubricante que es una combinación de un fluido o grasa portante con un elevado porcentaje de lubricantes sólidos (grafito, bisulfuro de molibdeno, cobre, aluminio bronce etc.) Inhibiendo la soldadura por asperezas (desgaste), rozamiento y el atascamiento final de los dispositivos mecánicos tales como uniones roscadas, pernos, tuercas y cojinetes.</strong>
+          <h3 >GRASAS LUBRICANTES</h3>
+          <p class="bg-info"><strong class="text-align : justify;">Son lubricantes viscoso--plásticos obtenidos  al espesar un aceite mineral o sintético con un jabón normalmente metálico.
+Según la <strong>ASTM</strong> es un producto sólido o semi-sólido obtenido por dispersión de un agente espesante, normalmente jabón, en aceites minerales o sintéticos.
+Parte de la producción total de energía del mundo es consumida en la fricción. La fricción genera calor y el equipo que funciona con calor tiene mas desgaste. Un lubricante debe  reducir el  coeficiente de fricción y de este modo reduce la cantidad de calor que genera. Las grasas poseen coeficientes de fricción mas bajos que los aceites que se utilizan en su fabricación, especialmente en condiciones de lubricación limite. Por tanto se consume menos energía con grasas que con aceites.
+Las grasas  son el otro gran grupo de lubricantes en forma sólida o semi-sólida que complementan la lubricación</strong>
           </p>
         </div>
         <div class="row">
 
 
         <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-          <h3>TRIBOPASTE   NI - 300</h3>
-          <p class="bg-info">PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.</p>
-        </div>
+          <a href="#">GRASAS DE CALCIO, COMPLEJAS DE CALCIO Y COMPLEJAS DE SULFONATO DE CALCIO</a>
+
+
+          </div>
+
+
+
+
+
         <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-          <h3>SPA METÁLLICAL - CE  (MODIFICADA)</h3>
-          <p class="bg-info">PASTA ANTIA FERRANTE A BASE DE POLVO DE NÍQUEL PARA TEMPERATURAS HASTA DE 1425ºC, PARA USARSE EN APLICACIONES DONDE NO SE PERMITE LA PRESENCIA DE COBRE.</p>
+          <a href="#">*GRASAS DE SODIO</a>
 
         </div>
-        <div id="top2"class="row">
 
 
-        <div  class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-          <h3>PASTA DE SILICON PIT</h3>
-          <p class="bg-info">LA “PASTA DE SILICON PIT” SE UTILIZA PREFERENTEMENTE COMO PASTA ELECTRO AISLANTE ESTE PRODUCTO SE DISTINGUE POR UNA SERIE DE VENTAJOSAS CARACTERÍSTICAS ES HIDRÓFUGA, ESTABLE AL VAPOR DE AGUA, OXIGENO, OZONO, A LOS ACEITES VEGETALES, MINERALES, GASES, ÁCIDOS DILUIDOS  Y LEJÍAS </p>
-
+        <div  id="png"class="col-md-6 wow fadeInDown " data-wow-duration="1000ms" data-wow-delay="600ms">
+          <a  href="#">*<strong>GRASAS DE LITIO</strong></a>
         </div>
-        </div>
+
       </div>
-      <div id="top"class="row ">
 
 
-      <div  class="col-md-5 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
-        <h3>SPA METÁLICA 20 (SINTÉTICA)</h3>
-        <p class="bg-info">COMPUESTO ANTIA FERRANTE PARA ALTAS TEMPERATURAS, CONTIENE POLVO DE ALUMINIO ULTRA MICRONIZADO, ESPECIAL PARA PIEZAS DE ACERO INOXIDABLE SUJETAS A TEMPERATURAS DE HASTA 1100 ºC. </p>
+
+
+
+
 </div>
-</div>
-
-
-    <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
-      <h3>PASTA DE COBRE - 201</h3>
-      <p class="bg-info">EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 201” ESTA DISEÑADO PARA LUBRICAR, PROTEGER Y SELLAR LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA 1000°C</p>
-
-    </div>
-    <div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
-      <h3>PASTA DE COBRE 202 NS</h3>
-      <p class="bg-info">EL COMPUESTO ANTIA FERRANTE “PASTA DE COBRE – 202  NS”  ESTA DISEÑADA PARA LUBRICAR, PROTEGER Y SELLAR  LAS UNIONES ROSCADAS DE TUBERÍAS SUJETAS A TEMPERATURAS DE HASTA  1000°C.  (PASTA ELECTRO CONDUCTIVA)</p>
-
-    </div>
-
-
-
 
 
 
