comit de prueva
prueva

--- a/webactual/index.html
+++ b/webactual/index.html
@@ -255,7 +255,7 @@
 
           <div class="col-sm-4 col-sm-4 col-xs-12">
             <div class="service-item">
-              <p align="justify">No tiene representantes ni distribuidores exclusivos en el país sus clientes principales son fabricantes de lubricantes convencionales o distribuidores mayoristas, los cuales complementan sus líneas de productos con los desarrollos de <strong>TRIBOQUIMIA</strong>, por lo tanto no existe un requisito formal para ser distribuidor de nuestros productos debido a que quienes compran estos materiales los reenvasan y reetiquetan comercializándolos con su propia marca.<br>
+              <p align="justify">NO tiene representantes ni distribuidores exclusivos en el país sus clientes principales son fabricantes de lubricantes convencionales o distribuidores mayoristas, los cuales complementan sus líneas de productos con los desarrollos de <strong>TRIBOQUIMIA</strong>, por lo tanto no existe un requisito formal para ser distribuidor de nuestros productos debido a que quienes compran estos materiales los reenvasan y reetiquetan comercializándolos con su propia marca.<br>
               <img align="absbottom" src="img/oil12.jpg">
               </p>
 
