--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -39,8 +39,7 @@
 <li role="presentation"><a href="index.html" class="active">HOME</a></li>
 <li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
 <li role="presentation"><a href="productos.html">PRODUCTOS</a></li>
-<li role="presentation"><a href="contacto.html">CONTACTO</a></li>
-<li role="presentation"><a href="ubicacion.html">UBICACION</a></li>
+<li role="presentation"><a href="contacto y ubicacion.html">CONTACTO Y UBICACION</a></li>
             </ul>
           </div>
         </div>
