--- a/webactual/index.html
+++ b/webactual/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Las 3 metaetiquetas anteriores * deben * ser lo primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
-  <title>TRIBOQUIMIA</title>
+  <title >TRIBOQUIMIA</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,21 +18,35 @@
 
 <body>
   <header id="header">
+  <div>
+
+
+
+
+
+
     <nav class="navbar navbar-default navbar-static-top" role="banner">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <div class="navbar-header ">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse  ">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+
+
+
           <div class="navbar-brand">
             <a href="index.html"><h1>LUBRICANTES Y ESPECIALIDADES</h1></a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
-          <div class="menu">
+          <div class="menu col">
+
+
+
+
             <ul class="nav nav-tabs" role="tablist">
 <li role="presentation"><a href="index.html" class="active">HOME</a></li>
 <li role="presentation"><a href="servicios y beneficios.html">SERVICIOS Y BENEFICIOS</a></li>
@@ -42,6 +56,7 @@
             </ul>
           </div>
         </div>
+</div>
       </div>
       <!--/.container-->
     </nav>
