prueva de correo  aun no queda

--- a/webactual/index.html
+++ b/webactual/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
   <!-- Las 3 metaetiquetas anteriores * deben * ser lo primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
   <title >TRIBOQUIMIA</title>
 
@@ -18,7 +18,7 @@
 
 <body>
   <header id="header">
-  <div>
+
 
 
 
@@ -238,6 +238,7 @@
   <section id="service" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
         <div class="row">
+          <div class="main">
           <div class="col-md-12 text-center">
             <h3 class=" col-md-12 service-title pad-bt15 "><strong>TRIBOQUIMIA</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <strong>EAST MEXICAN LUBRICANTS<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; COMPANY S.A. DE C.V.</strong></h3>
@@ -246,7 +247,16 @@
 
 
 
-          <div class="col-sm-4 col-sm-4 col-xs-4">
+
+
+
+
+
+
+
+
+
+          <div  class="col-sm-4 col-sm-4 col-xs-4">
             <div class="service-item">
               <p text-align : justify;>Es una empresa 100% mexicana que desarrolla tecnologia, fabrica lubricantes sinteticos, grasas y aceites en adicion elabora especialidades para la industria todo esto bajo la marca de <strong>OLLIN</strong> (Movimiento).
               <img src="img/img2.jpg"><br>
@@ -258,6 +268,7 @@
             </div>
             </div>
 
+
             <div class="col-sm-4 col-sm-6 col-xs-4">
             <div class="service-item">
               <p align="justify">Dedica la   mayor parte de su tiempo a la fabricación de lubricantes y grasas a partir de   cualquier base sintética en el mercado. Un 90% de la producción ha sido   desarrollado como substituto de lubricantes de importación.<br>
@@ -267,7 +278,7 @@
             </div>
           </div>
 
-          <div class="col-sm-4 col-sm-4 col-xs-12">
+          <div class="col-sm-4 col-sm-4 col-xs-1">
             <div class="service-item">
               <p align="justify">NO tiene representantes ni distribuidores exclusivos en el país sus clientes principales son fabricantes de lubricantes convencionales o distribuidores mayoristas, los cuales complementan sus líneas de productos con los desarrollos de <strong>TRIBOQUIMIA</strong>, por lo tanto no existe un requisito formal para ser distribuidor de nuestros productos debido a que quienes compran estos materiales los reenvasan y reetiquetan comercializándolos con su propia marca.<br>
               <img align="absbottom" src="img/oil12.jpg">
@@ -275,12 +286,13 @@
 
 
 
-
+</div>
 
             </div>
           </div>
         </div>
       </div>
+
     </section>
 
 
@@ -374,6 +386,7 @@
         <img src="./img/imgmedia/imagen12.png" alt="">
 
     </div>
+
   </div>
 
   </div>
@@ -418,6 +431,7 @@
   </div>
 
   </div>
+
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
