--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -52,11 +52,12 @@
 
   <div class="gallery">
     <div class="text-center">
-      <h2>PRODUCTOS</h2>
-      <p>TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.
-Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias:
-
-Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas, Industria del azúcar y Lubricantes ecológicos.
+      <h2 align="left">PRODUCTOS</h2>
+      <p align="justify"><b>TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.<br>
+      <br>
+      Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes<br> 
+      donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias:<br>
+      Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas,<br> Industria del azúcar y Lubricantes ecológicos.</b>
 
  </p>
     </div>
