pagina de gracias  en proceso
este es el avanze de ese boton      para redireccionar ala pagina  pasa     ser  agrego una   csss  nuevo que es button

--- a/webactual/gracias.html
+++ b/webactual/gracias.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/button.css">
     <title></title>
   </head>
   <body>
-    <h1>g</h1>
+    <h1 >gracias por mandar tu consulta </h1>
+    <button id="mio"type="button" name="button"> regresar </button>
   </body>
 </html>
