listo ya manda formulario
mandar correo subiorlo y  checar puewva en el hosat verdsDERO

--- a/webactual/gracias.html
+++ b/webactual/gracias.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1 >gracias por mandar tu consulta </h1>
-    <button id="mio"type="button" name="button"> regresar </button>
+    <form class="" action="contacto y ubicacion.html" method="post">
+
+
+    <button id="mio"type="submit"  vlaue ="index.html"name="button"> regresar </button>
+</form>
   </body>
 </html>
