--- a/webactual/productos.html
+++ b/webactual/productos.html
@@ -55,7 +55,7 @@
       <h2 align="left">PRODUCTOS</h2>
       <p align="justify"><b>TRIBOQUIMIA S.A. DE C.V. Tiene una amplia gama de lubricantes para cada tipo de industria, contamos con el lubricante ideal para su maquinaria.<br>
       <br>
-      Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes<br> 
+      Para conocer mas acerca de nuestros productos respecto a sus usos y especificaciones, puede accesar a cualquiera de los vínculos siguientes<br>
       donde usted encontrara, lubricantes aplicados en los siguientes tipos de industrias:<br>
       Industria textil, Industria del acero, Industria alimenticia, Industria del vidrio, Industria metalmecánica, Industria de cemento y minas,<br> Industria del azúcar y Lubricantes ecológicos.</b>
 
@@ -64,9 +64,13 @@
     <div class="col">
 
 
-    <div class="container">
-      <div class="col-xs-4">
-        <figure class="effect-marley"><a href="./PastasMetalicas.html">
+    <div class="container " class="col-lg-5a">
+<div id="conimg">
+
+
+
+      <div class= "col-xs-4">
+        <figure  class="effect-marley"><a href="./PastasMetalicas.html">
           <img src="img/imgmetal.jpg" alt="" class="img-responsive" />
           <figcaption> <a href="./PastasMetalicas.html">
             <h4 class="text-center">Pastas Metalicas</h4>
@@ -76,7 +80,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-xs-3">
+      <div class="col-xs-4">
         <figure class="effect-marley"><a href="./PastasMetalicas.html">
         <figure class="effect-marley">
           <img src="img/ojana.jpg" alt="" class="img-responsive" />
@@ -86,7 +90,8 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-xs-4">
+      </div>
+      <div  id="ims"class="col-xs-5">
         <figure class="effect-marley"><a href="./Fluidos.html">
           <img src="img/fluidos-1.jpg" alt="" class="img-responsive" />
           <figcaption>
@@ -101,6 +106,7 @@ FLUIDOS  LUBRICANTES PARA
     </div>
 
     <div class="container">
+      <div id="conimg1">
       <div class="col-xs-4">
         <figure class="effect-marley"><a href="./AceitedeCorte.html">
           <img src="img/dua.jpeg" alt="" class="img-responsive" />
@@ -109,9 +115,11 @@ FLUIDOS  LUBRICANTES PARA
             <p>Triboquimia posee una amplia gama de productos aplicables a  la industria metalmecánica: </p></a>
           </figcaption>
         </figure>
-      </div>
-      
-      <div  class="col-sm-4">
+
+</div>
+
+
+      <div  class="col-xs-4">
 
 
         <figure class="effect-marley"><a href="./LubricantesenAeorosol.html">
