--- a/webactual/fluidos hidraulica sintetico.html
+++ b/webactual/fluidos hidraulica sintetico.html
@@ -55,48 +55,36 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>FLUIDOS LUBRICANTES</strong></h2>
+<h2 align="left"><strong>FLUIDOS HIDRAULICOS IGNIFUGOS DIFERENTES BASES SINTETICAS
+</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
-      <p align="justify">
-    <a href="fluidos lubricantes para cadena.html">FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS </a>
-    <br>
-      <br><a href="fluidos para maquinaria.html">FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y FARMACÉ</a>
-       <br>
+      <p align="justify"><strong>
+Los engranajes son unos de los dispositivos mecánicos mas empleados en maquinaria de todo tipo, su característica de choque-deslizamiento entre dientes lo hacen un dispositivo a lubricar con fluidos especializados. Las distintas condiciones de operación y aplicación han conducido al desarrollo de lubricantes con diferentes bases sintéticas, para satisfacer el requerimiento de los fabricantes de equipo original. TRIBOQUIMIA, cuenta con una línea completa de estos fluidos que bajan el consumo de potencia entre un 2 y 5 % con respecto a los aceites convencionales mientras mantienen una excelente estabilidad térmica.    <br>
+      <strong>HIDRAULICO GA </strong><br>
       <br>
-      <a href="fluidos hidraulicos.html">FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</a>
+      <strong>SPAYLENE SERIE 300</strong><br>
+    <p>LUBRICANTES SINTÉTICOS INDUSTRIALES PARA ENGRANES, RODAMIENTOS Y COJINETES A BASE DE HIDROCARBUROS SINTETICOS PAO´S</p>
+      <strong> GLYG OLLIN SERIE 200
+ </strong> Hidrocarburos sintéticos, PAO´S.<br>
       <br>
 
-    <br>
-    <a href="fluidos hidraulica sintetico.html">FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES </a>
-      <br>
-  <br>
-  <a href="fluidos termicos.html">FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</a>
-      <br>
-      <br>
-<a href="fluidos lubricantes para compresore de aire.html">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-        </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
+      <strong>GLYG OLLIN SERIE 200</strong><br>
 
-<a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
+      LUBRICANTES SINTÉTICOS PARA ENGRANES INDUSTRIALES A BASE DE POLIGLICOL.
+<br>
 
-    <br>
-    <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</a>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
+      <strong>ARLAN FM (TERMOESTABLE)
+</strong><br>
 
+LUBRICANTES SEMI-SINTETICOS ANTIDESGASTE Y ANTIFRICCIÓN (EVITAN EL MICRO PITING).
+<br>
       </p>
 
       </div>
