--- a/webactual/fluidos hidraulicos.html
+++ b/webactual/fluidos hidraulicos.html
@@ -55,48 +55,39 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>FLUIDOS LUBRICANTES</strong></h2>
+<h2 align="left"><strong>FLUIDOS HIDRAULICOS IGNIFUGOS DIFERENTES BASES SINTETICAS
+</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-    <a href="fluidos lubricantes para cadena.html">FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS </a>
+<strong>Las condiciones de operación de la maquinaria hidráulica se han vuelto mas severas que nunca. Altas temperaturas combinadas con velocidades y presiones elevadas crean un serio riesgo de incendio. El uso de fluidos hidráulicos resistentes al fuego es necesario en industrias tales como acereras, fundidoras de metal, minas y generación de energía. Las aplicaciones son tan diversas que una sola base sintética no satisface a todas, TRIBOQUIMIA fabrica fluidos hidráulicos ignífugos en diferentes bases sintéticas y viscosidades.</strong>
     <br>
-      <br><a href="fluidos para maquinaria.html">FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y FARMACÉ</a>
-       <br>
+      <strong>HIDRAULICO GA </strong><br>
       <br>
-      <a href="fluidos hidraulicos.html">FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</a>
+      <strong>FLUIDOS  HIDRÁULICOS  RESISTENTE AL FUEGO CON CARACTERÍSTICAS ANTIDESGASTE AGUA-GLICOL</strong><br>
       <br>
-
-    <br>
-    <a href="fluidos hidraulica sintetico.html">FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES </a>
+      <strong> 21. CFR 172 - 882 </strong> Hidrocarburos sintéticos, PAO´S.<br>
       <br>
-  <br>
-  <a href="fluidos termicos.html">FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</a>
-      <br>
-      <br>
-<a href="fluidos lubricantes para compresore de aire.html">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-        </p>
+      <strong>21. CFR 182</strong> 21. CFR 182<br>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
+      <strong>REOLUBE HYD</strong><br>
 
-<a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
+      FLUIDOS  HIDRÁULICOS BASE FOSFATO ESTERES
+<br>
 
-    <br>
-    <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</a>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
+      <strong>METSAFE HF
+</strong><br>
 
+      FLUIDOS HIDRÁULICOS  RESISTENTES  AL FUEGO BASE POLIOLÉSTER<br>
+
+      <strong>ECOGARD FR</strong><br>
+
+      FLUIDOS  HIDRÁULICOS  RESISTENTES AL FUEGO ECOLÓGICOS BASE POLIÉTER POLIOL
       </p>
 
       </div>
