--- a/webactual/fluidos lubricantes de aire.html
+++ b/webactual/fluidos lubricantes de aire.html
@@ -55,47 +55,55 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>FLUIDOS LUBRICANTES</strong></h2>
+<h2 align="left"><strong>FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR
+
+</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-    <a href="fluidos lubricantes para cadena.html">FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS </a>
-    <br>
-      <br><a href="fluidos para maquinaria.html">FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y FARMACÉ</a>
-       <br>
-      <br>
-      <a href="fluidos hidraulicos.html">FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</a>
-      <br>
 
-    <br>
-    <a href="fluidos hidraulica sintetico.html">FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES </a>
+<strong>Los compresores modernos son mas pequeños y funcionan a velocidades que todavía no hace muchos años parecían imposibles de lograr, esto hace que su lubricación sea mas critica. Los proveedores de lubricantes hemos tenido que introducir productos mas elaborados, que funcionen en condiciones ambientales cada vez mas adversas. La industria de los lubricantes no solo a creado nuevos productos para llenar esos requisitos, sino en realidad también a podido alargar los intervalos de cambio de aceite, en la mayor parte de los casos (8000 a 10000 hrs.) Diferentes bases sintéticas son necesarias para cubrir las exigencias de los fabricantes de compresores de aire. </strong>
       <br>
-  <br>
-  <a href="fluidos termicos.html">FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</a>
+      <strong>COMPRESOR GP OILS</strong><br>COMPRESOR GP OILS
+
+LUBRICANTES BASE MINERAL PARA COMPRESORES DE AIRE TIPO PREMIUM
+
       <br>
+      <strong>
+
+EOS SHF
+</strong> LUBRICANTES SINTETICOS PARA COMPRESORES PREMIUM BASE PAO´S<br>
       <br>
-<a href="fluidos lubricantes para compresore de aire.html">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-        </p>
+      <strong>EOS POE</strong> LUBRICANTES SINTÉTICAS PARA COMPRESORES PREMIUM DIESTER
+<br>
+      <br>
+      </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
+      <strong>EOS HDF
+</strong><br>
 
-<a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
+LUBRICANTES SEMI-SINTETICOS PARA COMPRESORES
+<br>
 
-    <br>
-    <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</a>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
+      <strong>XUPRA COOLANT
+
+</strong><br>
+LUBRICANTES SINTÉTICOS PREMIUM PARA COMPRESORES POLIALKILEN GLICOL/POLIOLESTER.
+<br>
+
+      <strong>EOS SHF GA
+
+</strong><br>
+
+LUBRICANTES SINTÉTICOS PREMIUM PARA COMPRESORES DE AIRE GRADO ALIMENTICIO (NSF H-1)
+<br>
+<strong>FLUSH - SOL
+</strong><br>DESCARBONIZANTE, LIMPIADOR DE COMPRESORES
 
       </p>
 
@@ -284,3 +292,4 @@
 </body>
 
 </html>
+}
