--- a/webactual/fluidos lubricantes para cadena.html
+++ b/webactual/fluidos lubricantes para cadena.html
@@ -55,49 +55,57 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>FLUIDOS LUBRICANTES</strong></h2>
+<h2 align="left"><strong>
+
+
+FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS
+
+</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-    <a href="fluidos lubricantes para cadena.html">FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS </a>
-    <br>
-      <br><a href="fluidos para maquinaria.html">FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y FARMACÉ</a>
+      Las cadenas son dispositivos de maquinas de gran importancia, que requieren lubricantes especializados para que su operación sea segura, efectiva, y económica. <strong>TRIBOQUIMIA</strong> posee una amplia experiencia en lubricantes para cadenas. El objetivo es ofrecer indicaciones de elección y uso<br>
+      <br>
+      Los lubricantes así como los productos de lubricación, la limpieza de las cadenas, la cantidad de lubricante y las instalaciones o equipos de lubricación deben estar en estrecha relación con las condiciones de funcionamiento.<br>
+      <br>
+      <strong>Un lubricante de calidad exige:</strong><br>
+      <br>
+      1.Fabricantes de lubricantes experimentados, que puedan presentar datos de aplicación. <br>
+      <br>
+      2.Lubricantes de probada eficacia, elegidos en base a los datos característicos.
+      <br>
+      3.Asesoramiento competente
+      <br>
+      4.Servicio.
+      <br>
+      <strong>GRAMOLLY  D8</strong><br>
+      DISPERSIÓN DE GRAFITO Y MOLIBDENO COLOIDAL EN UN SOLVENTE DE ALTO PUNTO DE INFLAMACIÓN, PARA APLICACIÓN POR ASPERSIÓN </p>
        <br>
-      <br>
-      <a href="fluidos hidraulicos.html">FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</a>
-      <br>
-
-    <br>
-    <a href="fluidos hidraulica sintetico.html">FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES </a>
-      <br>
-  <br>
-  <a href="fluidos termicos.html">FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</a>
-      <br>
-      <br>
-<a href="fluidos lubricantes para compresore de aire.html">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-        </p>
+<strong>ANTARES HT - 25</strong><br>
+PARA TEMPERATURAS HASTA  210°C
+<br>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
+      <strong>OVEN - BT</strong><br>
+<br>
+      PARA CADENAS DE HORNOS DE LITOGRAFÍA,  TEMPERATURAS  HASTA  230°C.<br>
 
-<a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
+      <strong>GRAMOLLY D - 4</strong><br>
+<br>
+      DISPERSIÓN DE GRAFITO COLOIDAL PURIFICADO EN SOLVENTE PARA CONDICIONES DE TEMPERATURA MAYOR DE  -40 A  260°C PARA APLICACIÓN <strong>POR MIGHTY LUBE SYSTEMATIC LUBRICATION  EQUIPMENT</strong>
 
-    <br>
-    <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
       <br>
+      <strong>MOLLY GRAF FLUID WTS</strong><br>
       <br>
-      <a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</a>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
-
-      </p>
+       DISPERSIÓN DE GRAFITO COLOIDAL Y MOLIBDENO EN UN ACEITE SINTÉTICO QUE NO CARBONIZA APLICACIONES HASTA 400°C      </p>
+<strong>VULKAN  OIL  HT</strong><br>
+<br>FLUIDOS PARA CADENAS EN ULTRA ALTAS TEMPERATURAS HASTA 260°C
+<strong>ANTARES HT 25 GA</strong><br>
+<br>FLUIDO PARA LUBRICAR CADENAS QUE TRANSPORTAN ALIMENTOS
 
       </div>
       </div>
