--- a/webactual/fluidos termicos.html
+++ b/webactual/fluidos termicos.html
@@ -55,47 +55,48 @@
   <div class="services">
     <div class="container">
 <div class="text-center">
-<h2 align="left"><strong>FLUIDOS LUBRICANTES</strong></h2>
+<h2 align="left"><strong>FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR
+
+</strong></h2>
 <hr class="bottom-line">
 </div>
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
 
       <p align="justify">
-    <a href="fluidos lubricantes para cadena.html">FLUIDOS  LUBRICANTES PARA CADENAS Y RODAMIENTOS EN ALTAS TEMPERATURAS </a>
-    <br>
-      <br><a href="fluidos para maquinaria.html">FLUIDOS PARA MAQUINARIA EN LA INDUSTRIA ALIMENTICIA Y FARMACÉ</a>
-       <br>
-      <br>
-      <a href="fluidos hidraulicos.html">FLUIDOS HIDRÁULICOS IGNÍFUGOS DIFERENTES BASES SINTÉTICAS</a>
-      <br>
 
-    <br>
-    <a href="fluidos hidraulica sintetico.html">FLUIDOS LUBRICANTES SINTÉTICOS PARA ENGRANES RODAMIENTOS Y COJINETES </a>
+<strong>Los fluidos de transferencia de calor fueron desarrollados por TRIBOQUIMIA, para usarse en altas temperaturas donde el empleo de vapor y agua caliente no son prácticos. Estos fluidos transfieren energía calorífica entre 260°c y 370°c donde las alternativas de fuego directo, conducción eléctrica y agua caliente/vapor son consideradas inseguras, costosas e incompatibles con el proceso. De la misma forma diferentes bases minerales y sintéticas son empleadas para la fabricación de estos fluidos con el objeto de cubrir una amplia gama de aplicaciones.</strong>
       <br>
-  <br>
-  <a href="fluidos termicos.html">FLUIDOS TÉRMICOS PARA TRANSFERENCIA DE CALOR</a>
+      <strong>THERMIK OILS</strong><br>
+ACEITES DE TRANSFERENCIA DE CALOR TIPO MINERAL BASES PARAFINICAS SELECCIONADAS GRUPO II
       <br>
+      <strong>TRIBOTHERM SS - 150stronf </strong> FLUIDO SEMI-SINTETICO DE TRANSFERENCIA DE CALOR<br>
       <br>
-<a href="fluidos lubricantes para compresore de aire.html">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-        </p>
+      <strong>TRIBOTHERM LV</strong> FLUIDO SINTETICO DE TRANSFERENCIA DE CALOR, NO CARBONIZA Y TIENE RESISTENCIA AL KRAKING TÉRMICO. (ALKIL AROMÁTICOS)
+<br>
+      <br>
+      </p>
       </div>
 
       <div class="col-sm-8 col-sm-6 col-xs-4 text-center" >
       <p align="justify" face="arial">
+      <strong>SILAX P Y SILAX M
+</strong><br>
 
-<a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE AIRE</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
+LOS ACEITES SINTETICOS A BASE DE “METIL FENIL POLISILOXANOS” (SILAX P – 500). PARA APLICACIONES EN ALTA TEMPERATURA Y SISTEMAS ABIERTOS.
 
-    <br>
-    <a href="#">FLUIDOS PARA BOMBAS DE VACÍO</a>
-      <br>
-      <br>
-      <a href="#">FLUIDOS LUBRICANTES PARA COMPRESORES DE REFRIGERACIÓN</a>
-      <strong>PASTA DE SILICON PIT</strong><br>
-      <br>
+“METIL POLISILOXANOS” (SILAX M - 500) PARA APLICACIÓN EN DIFUSIÓN DE METALES. MAS ECONÓMICO QUE EL SILAX P
+<br>
+
+      <strong>HEAT SINTH - 32
+</strong><br>
+
+FLUIDO SINTÉTICO PARA TRANSFERENCIA DE CALOR DE ALTA EFICIENCIA Y AMPLIA VIDA A BASE DE PAO´S PARA TEMPERATURAS EN EL TANQUE DE EXPANSIÓN. HASTA 460°C.
+<br>
+
+      <strong>THERMOFLUID FG
+</strong><br>
+
+FLUIDO PARA TRANSFERENCIA DE CALOR CON STATUS FDA/USP/NF (PARA CONTACTO INCIDENTAL CON ALIMENTOS)
 
       </p>
 
